--- a/src/pages/forum/Forum.module.css
+++ b/src/pages/forum/Forum.module.css
@@ -1,20 +1,22 @@
-.button {
-  color: white;
+.container{
+  background-color: #011526;
+  width: 100%;
+  height: 100vh;
 }
 
-.home__container {
+.forum__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: blueviolet;
+  background-color: beige;
   margin-left: 200px;
   width: calc(100vw - 200px);
   height: calc(100vh - 80px);
 }
 
 @media screen and (max-width: 768px) {
-  .home__container {
+  .forum__container {
     margin-left: 70px;
   }
 }
