--- a/src/pages/jobs/Jobs.module.css
+++ b/src/pages/jobs/Jobs.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
   background-color: #011526;
   width: 100%;
   height: 100vh;
@@ -8,11 +8,32 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background-color: beige;
+  justify-content: flex-start;
+  /* background-color: beige; */
   margin-left: 200px;
-  width: 100%;
+  width: calc(100vw - 200px);
   height: calc(100vh - 80px);
+  max-width:calc(100vw - 200px);
+  overflow-y: scroll;
+}
+
+.jobs__container::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #082640;
+}
+
+.jobs__container::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #011526;
+}
+
+.jobs__container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
 }
 
 @media screen and (max-width: 768px) {
