--- a/src/pages/news/News.module.css
+++ b/src/pages/news/News.module.css
@@ -11,7 +11,7 @@
   justify-content: center;
   background-color: beige;
   margin-left: 200px;
-  width: 100%;
+  width: calc(100vw - 200px);
   height: calc(100vh - 80px);
 }
 
