push messages with intergrated with data

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -6,7 +6,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  
 }
 .navbar__input {
   background-color: transparent;
@@ -34,7 +33,7 @@
   color: white;
 }
 
-.navbar__userimage{
+.navbar__userimage {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -55,7 +54,7 @@
     margin-left: 70px;
   }
   .navbar__input {
-   display: none; 
+    display: none;
   }
   .navbar__searchbar {
     border-radius: 50%;
@@ -65,4 +64,9 @@
     align-items: center;
     justify-content: center;
   }
+}
+.buttonSignOut {
+  border: none;
+  border-radius: 100%;
+  background-color: transparent;
 }
