--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -9,6 +9,25 @@
   padding: 20px;
 }
 
+.sidebar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #082640;
+}
+
+.sidebar::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #011526;
+}
+
+.sidebar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(51, 50, 50);
+}
+
 .sidebar__header {
   display: flex;
   flex-direction: row;
