--- a/src/pages/communities/Communities.module.css
+++ b/src/pages/communities/Communities.module.css
@@ -5,14 +5,29 @@
 }
 
 .communities__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: beige;
+  /* background-color: beige; */
   margin-left: 200px;
   width: calc(100vw - 200px);
   height: calc(100vh - 80px);
+  padding: 20px;
+}
+
+.communities__title {
+  font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.communities__cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.communities__card {
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 768px) {
