--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,16 +5,57 @@
 .home__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   margin-left: 200px;
   width: calc(100vw - 200px);
   height: calc(100vh - 80px);
+  padding: 20px;
+  overflow-y: scroll;
+}
+
+.home__container::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #082640;
+}
+
+.home__container::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #011526;
+}
+
+.home__container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+.home__title {
+  font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.home__most {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.home__upcoming{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
   .home__container {
     margin-left: 70px;
+    width: calc(100vw - 70px);
   }
 }
